--- a/Work1/Work1.vcxproj.filters
+++ b/Work1/Work1.vcxproj.filters
@@ -19,4 +19,9 @@
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Лабораторная работа 1.docx">
+      <Filter>Файлы ресурсов</Filter>
+    </None>
+  </ItemGroup>
 </Project>
